<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView11"
        android:layout_width="183dp"
        android:layout_height="189dp"
        app:cardBackgroundColor="@color/iconcolor"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView8"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView"
            android:layout_width="38dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/bmi"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton13"
            android:layout_width="144dp"
            android:layout_height="120dp"
            android:background="#00000000"
            android:contentDescription="@string/bmi"
            android:onClick="BMI_method"
            app:srcCompat="@mipmap/bmi2_foreground" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="181dp"
        android:layout_height="189dp"
        app:cardBackgroundColor="@color/iconcolor"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="143dp"
            android:layout_height="126dp"
            android:background="#00000000"
            android:contentDescription="@string/steps"
            android:onClick="steps_method"
            app:srcCompat="@mipmap/feet_foreground" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/steps"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView9"
        android:layout_width="183dp"
        android:layout_height="190dp"
        android:layout_marginStart="16dp"
        app:cardBackgroundColor="@color/iconcolor"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView12"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/detect_disease"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="149dp"
            android:layout_height="126dp"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:onClick="disease_method"
            app:srcCompat="@mipmap/disease_foreground" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView12"
        android:layout_width="181dp"
        android:layout_height="191dp"
        app:cardBackgroundColor="@color/iconcolor"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/cardView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView8"
        app:layout_constraintVertical_bias="0.503">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="126dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/meditation"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="147dp"
            android:layout_height="120dp"
            android:background="#00000000"
            android:contentDescription="@string/bmi"
            android:onClick="meditation_method"
            app:srcCompat="@mipmap/medi_foreground" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView10"
        android:layout_width="183dp"
        android:layout_height="187dp"
        app:cardBackgroundColor="@color/iconcolor"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardView13"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="134dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/calorie_count"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="139dp"
            android:layout_height="119dp"
            android:background="#00000000"
            android:onClick="calories_method"
            app:srcCompat="@mipmap/calorie_foreground"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView13"
        android:layout_width="180dp"
        android:layout_height="186dp"
        app:cardBackgroundColor="@color/iconcolor"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="127dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/alarm_clock"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="141dp"
            android:layout_height="120dp"
            android:background="#00000000"
            android:contentDescription="@string/alarm_clock"
            android:onClick="alarm_method"
            app:srcCompat="@mipmap/alarm_foreground" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView14"
        android:layout_width="296dp"
        android:layout_height="143dp"
        app:cardBackgroundColor="@color/iconcolor"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/chat_with_us"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/app_name"
            android:onClick="chatbot_method"
            app:srcCompat="@mipmap/chatboticon_foreground"
            tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
